Removed name from task

--- a/app/views/caseaccess/pages/mywork-s2.html
+++ b/app/views/caseaccess/pages/mywork-s2.html
@@ -72,7 +72,7 @@ My work
 
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request from Judge Randel-Combeswardly</td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review specific access request</td>
                                 <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">12 Feb</span> </td>
                                 <td class="govuk-table__cell"><a href="mywork-s2o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
