--- a/app/views/caseaccess/pages/PA-00467-2017-t.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-t.html
@@ -117,7 +117,7 @@ Case details
 
         <div class="govuk-grid-column-two-thirds">
 
-          <h2 class="govuk-heading-l  govuk-!-margin-bottom-2">Active tasks</h2>
+          <h2 class="govuk-heading-l  govuk-!-margin-bottom-2">Tasks</h2>
           <p></p>
           <table class="govuk-table">
             <caption class="govuk-table__caption govuk-table__caption--m">1. Review specific access request <span class="hmcts-badge hmcts-badge--green hmcts-badge_right">12 Feb</span></caption>
