updates and formatting

--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -1,12 +1,8 @@
-
 {% extends "layout.html" %}
-
 {% block pageTitle %}
   GOV.UK Prototype Kit
 {% endblock %}
-
 {% block content %}
-
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl">
@@ -36,14 +32,14 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=judiciary&">Case view - Task details</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra?usertype=judiciary&">Case view - Task Approve</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac?usertype=judiciary&">Case view - Task Approved</a><br>Restricted access - Flow approve - Subject to change</p>
-
-                <p><a target="_blank" href="#">Email notifcation - Task Approved</a><br>TO BE ADDED</p>
+                <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p>
                 <h3 class="govuk-heading-s">Scenario C - Part 2 - Grant request Specific Access to case (approved)</h3>
+                <p><a target="_blank" href="/caseaccess/pages/mycases-tc?usertype=judiciary&">My cases</a><br>Restricted access - Flow request - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=judiciary&">Case view - Role / access</a><br>Restricted access - Flow request approved - Subject to change</p>
                 <h3 class="govuk-heading-s">Scenario D - Reject specific access to case</h3>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=judiciary&">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
                   <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=judiciary&">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
-                    <p><a target="_blank" href="c">Email notifcation - Task Rejected</a><br>TO BE ADDED</p>
+                    <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p>
             </div>
             <div>
                 <h2 class="govuk-heading-l">Staff</h2>
@@ -69,19 +65,16 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Case view - Task details</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra?usertype=staff&">Case view - Task Approve</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac?usertype=staff&">Case view - Task Approved</a><br>Restricted access - Flow approve - Subject to change</p>
-
-                <p><a target="_blank" href="#">Email notifcation - Task Approved</a><br>TO BE ADDED</p>
+                <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p>
                 <h3 class="govuk-heading-s">Scenario C - Part 2 - Grant request Specific Access to case (approved)</h3>
+                <p><a target="_blank" href="/caseaccess/pages/mycases-tc?usertype=staff&">My cases</a><br>Restricted access - Flow request - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=staff&">Case view - Role / access</a><br>Restricted access - Flow request approved - Subject to change</p>
                 <h3 class="govuk-heading-s">Scenario D - Reject specific access to case</h3>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
                   <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=staff&">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
-                    <p><a target="_blank" href="c">Email notifcation - Task Rejected</a><br>TO BE ADDED</p>
+                    <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p>
             </div>
         </div>
     </div>
 </div>
-
-
-
 {% endblock %}
