--- a/app/views/caseaccess/pages/PA-00321-2018-a.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-a.html
@@ -19,7 +19,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Challange access.<br>This case is located outside your working region. Access to this case is logged for auditing purposes.
+    Challanged access.<br>This case is located outside your working region. Access to this case is logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
