--- a/app/views/caseaccess/pages/PA-00467-2017-ara.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ara.html
@@ -50,17 +50,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab_b" href="#event">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-tc">
           Tasks
         </a>
       </li>
        <li class="govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab_b" href="PA-00467-2017-ar">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
           Roles / access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-atc">
           Overview
         </a>
       </li>
