--- a/app/views/caseaccess/pages/PA-00467-2017-trrc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trrc.html
@@ -3,28 +3,17 @@
 {% else %}
     {% extends "../layoutstaff.html" %}
 {% endif %}
-
-
 {% block pageTitle %}
 Case details
 {% endblock %}
-
-
 {% block content %}
-
-
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
-
-
     <div>
       <h1 class="govuk-heading-xl">PA/00467/2017</h1>
     </div>
-
-
     <div style="display: flex; align-items:right">
       <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
-
       <select class="govuk-select" id="sort" name="sort">
         <option value="published" selected="">Select action</option>
         <option value="published">Submit amended application</option>
@@ -33,31 +22,25 @@ Case details
         <option value="published">Upload document</option>
         <option value="updated">Stop representing a client</option>
       </select>
-
       <form name="aspnetForm" method="post" id="aspnetForm" autocomplete="off">
         <button class="govuk-button govuk-!-margin-left-1" data-module="govuk-button">
           Go
         </button>
       </form>
     </div>
-
-
-
   </div>
-
-
   <div class="govuk-tabs" data-module="govuk-tabs">
     <h2 class="govuk-tabs__title">
       Contents
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab_b" href="PA-00467-2017-t">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
           Tasks
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab_b" href="PA-00467-2017-ar">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
           Roles / access
         </a>
       </li>
@@ -102,30 +85,20 @@ Case details
         </a>
       </li> -->
     </ul>
-
-
-
     <div class="govuk-tabs__panel" id="event" style="display: padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px;">
       <div >
-
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
               {{ govukPanel({
                 titleText: "Access denied"
               }) }}
-
-
-
               <h2 class="govuk-heading-m">What happens next</h2>
-
               <p class="govuk-body">
                 We’ve sent the requester an email informing them they have been denied access to this case.
               </p>
-
               <p class="govuk-body">
                 <a href="/caseaccess/pages/PA-00467-2017-tc" class="govuk-link">Back to tasks</a>
               </p>
             </div>
           </div>
-
 {% endblock %}
