--- a/app/views/caseaccess/pages/PA/00321/2018.html
+++ b/app/views/caseaccess/pages/PA/00321/2018.html
@@ -22,7 +22,7 @@ Case details
       C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg>
       <div class="hmcts-banner__message">
       <span class="hmcts-banner__assistive">information</span>
-      This case is located outside your working region. Access to this case is logged for auditing purposes.
+      This case is located outside your working region. You have been granted access for 24hrs. Access to this case is logged for auditing purposes.
       </div>
       </div>
         <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
