--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -14,7 +14,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    Challenged access. <br>This case is located outside your working region. You have been granted access for 24hrs. Access to this case is logged for auditing purposes.
+    Challenged access. <br>This case is located outside your working region. Access to this case is logged for auditing purposes.
   </div>
 </div>
     <div class="govuk-grid-row">
