--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -40,6 +40,9 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=judiciary&">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
                   <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=judiciary&">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
                     <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p>
+                    <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
+                    <p><a target="_blank" href="/caseaccess/pages/booking?usertype=judiciary&">Booking UI</a><br>Select type of access - Subject to change</br></p>
+
             </div>
             <div>
                 <h2 class="govuk-heading-l">Staff</h2>
@@ -73,6 +76,7 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Case view - Task Reject</a><br>Restricted access - Flow rejected - Subject to change</p>
                   <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=staff&">Case view - Task Rejected</a><br>Restricted access - Flow rejected - Subject to change</p>
                     <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p>
+
             </div>
         </div>
     </div>
