--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -23,17 +23,17 @@ Case details
           name: "more-detail",
           id: "more-detail",
           label: {
-            text: "Why are you requesting access to this case?
+            text: "State why you are accessing this case?
 ",
             classes: "govuk-label--l",
             isPageHeading: true
           },
           hint: {
-            text: "You must provide a reason."
+            text: "You must provide a reason. This will be logged for auditing purposes."
           }
         }) }}
     {{ govukButton({
-  text: "Submit request",
+  text: "Submit",
   href: "PA-00321-2018-confirmation",
   classes: "govuk-!-margin-right-1"
 }) }}
