--- a/app/views/caseaccess/pages/PA-00467-2017-atc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-atc.html
@@ -19,7 +19,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>Specific access.<br>
-    You have been granted access for 24hrs. Access to this case is logged for auditing purposes.
+    You have been granted access for [duration]. Access to this case is logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
