--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -14,7 +14,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-Specific access.<br>Access requires manual authorisation from team responsible for this case. Access to this case is logged for auditing purposes.</div>
+Specific access.<br>Access requires manual authorisation. Access to this case is logged for auditing purposes.</div>
 </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
