--- a/app/views/caseaccess/pages/PA-00467-2017-trac.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac.html
@@ -33,24 +33,23 @@ Case details
     <h2 class="govuk-tabs__title">
       Contents
     </h2>
-    <ul class="govuk-tabs__list">
+        <ul class="govuk-tabs__list">
+          <li class="govuk-tabs__list-item">
+            <a class="govuk-tabs__tab" href="PA-00467-2017-tca">
+              Tasks
+            </a>
+          </li>
+          <li class="govuk-tabs__list-item">
+            <a class="govuk-tabs__tab" href="PA-00467-2017-araa">
+              Roles / access
+            </a>
+          </li>
+          <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+            <a class="govuk-tabs__tab" href="PA-00467-2017-atca">
+              Overview
+            </a>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
-          Tasks
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ara">
-          Roles / access
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
-          Overview
-        </a>
-      </li>
-      <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#past-week">
+        <a class="govuk-tabs__tab" href="#">
           Appeal
         </a>
       </li>
@@ -93,14 +92,14 @@ Case details
                 titleText: "Access approved"
               }) }}
               <h2 class="govuk-heading-m">What happens next</h2>
-              <p class="govuk-body">
+            <!--  <p class="govuk-body">
                 We’ve sent the requester an email informing them they now have access to the case.
-              </p>
+              </p> -->
               <p class="govuk-body">
                 Their details will appear under the role and access tab.
               </p>
               <p class="govuk-body">
-                <a href="/caseaccess/pages/PA-00467-2017-tc" class="govuk-link">Back to tasks</a>
+                <a href="/caseaccess/pages/PA-00467-2017-tca" class="govuk-link">Back to tasks</a>
               </p>
             </div>
           </div>
