--- a/app/views/caseaccess/pages/PA-00467-2017-trr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr.html
@@ -113,7 +113,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices eni
               isPageHeading: true
             },
             hint: {
-              text: "This will be sent as an email notification to the requester."
+              text: "This reason will be sent to the requester."
             }
           }) }}
         </div>
