--- a/app/views/caseaccess/pages/PA-00467-2017-trrc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trrc.html
@@ -94,7 +94,7 @@ Case details
               }) }}
               <h2 class="govuk-heading-m">What happens next</h2>
               <p class="govuk-body">
-                We’ve sent the requester an email informing them they have been denied access to this case.
+                The requester has been denied access to this case.
               </p>
               <p class="govuk-body">
                 <a href="/caseaccess/pages/PA-00467-2017-tc" class="govuk-link">Back to tasks</a>
