--- a/app/views/caseaccess/pages/mycases-p.html
+++ b/app/views/caseaccess/pages/mycases-p.html
@@ -61,7 +61,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access request with [Name of approver]</td>
                     <td class="govuk-table__cell"> </td>
                     <td class="govuk-table__cell"></td>
                 </tr>
