--- a/app/views/caseaccess/pages/PA-00467-2017-araa.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-araa.html
@@ -12,16 +12,7 @@ Case details
 
 {% block content %}
 
-<div class="hmcts-banner">
-  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-    <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-  C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-  </svg>
-  <div class="hmcts-banner__message">
-    <span class="hmcts-banner__assistive">information</span>Specific access.<br>
-    You have been granted access for [duration]. Access to this case is logged for auditing purposes.
-  </div>
-</div>
+
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div>
@@ -50,17 +41,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-tc">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-tca">
           Tasks
         </a>
       </li>
        <li class="govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ara">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-araa">
           Roles / access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-atc">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-atca">
           Overview
         </a>
       </li>
