--- a/app/views/caseaccess/pages/PA-00467-2017.html
+++ b/app/views/caseaccess/pages/PA-00467-2017.html
@@ -21,7 +21,7 @@ Case details
         </svg>
         <div class="hmcts-banner__message">
           <span class="hmcts-banner__assistive">information</span>
-Specific access.<br>Access requires manual authorisation from team responsible for this case. Access to this case is logged for auditing purposes.</div>
+Specific access.<br>Access requires manual authorisation. Access to this case is logged for auditing purposes.</div>
 </div>
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
       <div class="" style="display: flex; justify-content: space-between; ">
