--- a/app/views/caseaccess/pages/mycases-tc.html
+++ b/app/views/caseaccess/pages/mycases-tc.html
@@ -61,7 +61,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">London</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access for [duration]</td>
                     <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">12 FEB</span>  </td>
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
