--- a/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
@@ -23,7 +23,7 @@ Case details
 -->
       <h2 class="govuk-heading-m">What happens next</h2>
       <p class="govuk-body">
-      The file will be accessible for [duration].</p>
+      The file will be accessible until [duration].</p>
       <p class="govuk-body">
         After [duration] expires you will need to request access again.
       </p>
