--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -23,13 +23,13 @@ Case details
           name: "more-detail",
           id: "more-detail",
           label: {
-            text: "State why you are accessing this case?
+            text: "State why you are accessing this case
 ",
             classes: "govuk-label--l",
             isPageHeading: true
           },
           hint: {
-            text: "You must provide a reason. This will be logged for auditing purposes."
+            text: "Access will be granted for [duration]. You must provide a reason."
           }
         }) }}
     {{ govukButton({
