--- a/app/views/caseaccess/pages/mycases-r.html
+++ b/app/views/caseaccess/pages/mycases-r.html
@@ -61,7 +61,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Access granted for [duration]</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged access until [duration]</td>
                     <td class="govuk-table__cell"></td>
                     <td class="govuk-table__cell"><a href="mycases-ro" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
