--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -28,11 +28,11 @@ Specific access.<br>Access requires manual authorisation. Access to this case is
             isPageHeading: true
           },
           hint: {
-            text: "You must provide a reason."
+            text: "Access requires manual authorisation from [Name of approver]. You must provide a reason."
           }
         }) }}
     {{ govukButton({
-  text: "Submit request",
+  text: "Submit",
   href: "PA-00467-2017-confirmation",
   classes: "govuk-!-margin-right-1"
 }) }}
