--- a/app/views/caseaccess/pages/PA-00467-2017-tra.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra.html
@@ -132,7 +132,7 @@ Case details
       name: "contact",
       fieldset: {
         legend: {
-          text: "Duration of case access",
+          text: "Grant duration of case access",
           isPageHeading: true,
           classes: "govuk-fieldset__legend--l"
         }
@@ -144,7 +144,7 @@ Case details
 
         {
           value: "phone",
-          text: "One calendar day",
+          text: "Current day only",
           hint: {
         text: "Starts from today."
       }
