--- a/app/views/caseaccess/pages/PA-00467-2017-trr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr.html
@@ -98,6 +98,10 @@ Case details
                 <td class="govuk-table__cell">Judge Randel-Combeswardly</td>
               </tr>
               <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
+                <td class="govuk-table__cell">DD/MM/YYYY</td>
+              </tr>
+              <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for access</th>
                 <td class="govuk-table__cell">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices enim in egestas porttitor. Vivamus iaculis ex eu dolor feugiat elementum. Nunc id laoreet elit. In hac habitasse platea dictumst </td>
