Some of the updates to case search

--- a/app/views/searchcases/pages/casedetailsdivorce.html
+++ b/app/views/searchcases/pages/casedetailsdivorce.html
@@ -19,7 +19,7 @@ Case details
             <div class=""  style="display: flex; justify-content: space-between; ">
 
                 <div style="display: flex; ">
-                    <p class="">8771785741275065: Smith v Jones  &nbsp; </p>
+                    <p class="">{{data.casereference}}: Smith v Jones  &nbsp; </p>
 
                     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                         Print
